Revert "Merge pull request #1 from makunkun/dev"
This reverts commit fc54fdd3601b861f9d075ce285c334f50205d516, reversing
changes made to 0278ad20d0fe429364f5024b6f38be219420ccea.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </style>
 </head>
 <body>
-  <canvas width="375" height="667" id="game_canvas"></canvas>
+  <canvas width="375" height="667" id="canvas"></canvas>
   <script src="game.js" type="module"></script>
 </body>
 </html>
